--- a/Chrome_Serial/index.html
+++ b/Chrome_Serial/index.html
@@ -22,7 +22,10 @@
             </div>
         </div>
         <canvas id="myChart"></canvas>
-        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@3.3.2"></script>
+        <script src="https://cdn.jsdelivr.net/npm/luxon@1.27.0"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-luxon@1.0.0"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-streaming@2.0.0"></script>
         <script type="text/javascript" src="plotting.js"></script>
         <script type="text/javascript" src="serial.js"></script>
     </body>
