Implement basic filter

--- a/Chrome_Serial/index.html
+++ b/Chrome_Serial/index.html
@@ -12,13 +12,18 @@
                 <button id="open" onclick="openSerialPort()">Open Port</button>
                 <button id="close" onclick="closeSerialPort()">Close Port</button>
                 <button id="toggle-lcd" onclick="toggleLCD()">Toggle LCD</button>
+                <button id="toggle-filter" onclick="toggleFilter()">Toggle Filter</button>
                 <label for="period">PR3</label>
                 <input type="number" min="1" max="65535" step="1" value="15624" onchange="updatePeriod(this.value)" id="period">
                 <label for="desired-freq">Desired Freq</label>
                 <input type="number" max="125000" value="16" onchange="updateSamplingFreq(this.value)" id="desired-freq">
             </div>
             <div>
-                <p>Actual Sampling Freq: <spain id="actual-freq">16.000</spain>Hz<br/> Current EKG reading: <span id="ekg-value">0</span>V</p>
+                <p>
+                    Actual Sampling Freq: <spain id="actual-freq">16.000</spain>Hz<br/>
+                    Current EKG reading: <span id="ekg-value">0</span>V<br/>
+                    Average over <span id="buffer-size">0</span> samples: <span id="buffer-average">0</span>V
+                </p>
             </div>
         </div>
         <canvas id="myChart"></canvas>
